--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       <section class="dynamic__text__wrapper" id="rice">
         <h1 id="text"></h1>
       </section>
+
       <button onclick="runRice()">¡Sí quiero!</button>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
-    <script src="typewrating.js" type="text/javascript"></script>
+    <script src="typewritting.js" type="text/javascript"></script>
     <script src="rain.js" type="text/javascript"></script>
   </body>
 </html>
