--- a/index.html
+++ b/index.html
@@ -14,15 +14,45 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main class="content__wrapper">
-      <section class="dynamic__text__wrapper" id="rice">
-        <h1 id="text"></h1>
-      </section>
+    <main class="main">
+      <div class="content__wrapper">
+        <section class="hero__wrapper">
+          <div class="hero__content">
+            <div class="hero__content--text">
+              <h1 id="text">Ya somos maridas, ahora la party. Vente!</h1>
+            </div>
+            <div class="hero__content--gifs">
+              <div class="two__gifs--container">
+                <img
+                  class="emoji__laugh cat"
+                  src="https://media.tenor.com/r6MJYXMMyAQAAAAi/chat-cat.gif"
+                  alt=""
+                />
+                <img
+                  class="emoji__laugh"
+                  src="https://media.tenor.com/-ZSr_aYh6FAAAAAi/la-lisa.gif"
+                  alt=""
+                />
+              </div>
 
-      <button onclick="runRice()">¡Sí quiero!</button>
+              <img
+                class="emoji__laugh bird"
+                src="https://media.tenor.com/KBmXOXKfkwEAAAAi/bird-dancing.gif"
+                alt=""
+              />
+            </div>
+            <button class="hero__button" onclick="runRice()">
+              <img
+                class="heart"
+                src="https://media.tenor.com/ocTCYk0JZ0EAAAAi/te-amo.gif"
+                alt=""
+              />
+              <p>Sí, quiero!</p>
+            </button>
+          </div>
+        </section>
+      </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
     <script src="typewritting.js" type="text/javascript"></script>
-    <script src="rain.js" type="text/javascript"></script>
   </body>
 </html>
