added info party

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 
               <img
                 class="emoji__laugh bird"
-                src="https://media.tenor.com/KBmXOXKfkwEAAAAi/bird-dancing.gif"
+                src="https://media.tenor.com/7-DE65c5-yAAAAAi/ring-joypixels.gif"
                 alt=""
               />
             </div>
+          </div>
+          <div class="button__wrapper">
             <button class="hero__button" onclick="runRice()">
               <img
                 class="heart"
@@ -51,8 +53,25 @@
             </button>
           </div>
         </section>
+        <section class="info__content">
+          <div class="pigeon__wrapper">
+            <img
+              src="https://media.tenor.com/rfWi_Eu95RkAAAAi/paloma-dove.gif"
+              alt=""
+            />
+            <div class="where__wrapper">
+              <p class="where__text">
+                Te esperamos el 13.05.23 en Palma, 33 a las 20:00h
+              </p>
+            </div>
+            <img
+              src="https://media.tenor.com/rfWi_Eu95RkAAAAi/paloma-dove.gif"
+              alt=""
+            />
+          </div>
+        </section>
       </div>
     </main>
-    <script src="typewritting.js" type="text/javascript"></script>
+    <!-- <script src="typewritting.js" type="text/javascript"></script> -->
   </body>
 </html>
