--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="button__wrapper">
-            <button class="hero__button" onclick="runRice()">
+            <button class="hero__button" onclick="goWithTheFlow()">
               <img
                 class="heart"
                 src="https://media.tenor.com/ocTCYk0JZ0EAAAAi/te-amo.gif"
@@ -56,22 +56,19 @@
         <section class="info__content">
           <div class="pigeon__wrapper">
             <img
-              src="https://media.tenor.com/rfWi_Eu95RkAAAAi/paloma-dove.gif"
+              src="https://media.tenor.com/inHfVG1qRNcAAAAi/gracias.gif"
               alt=""
             />
-            <div class="where__wrapper">
-              <p class="where__text">
-                Te esperamos el 13.05.23 en Palma, 33 a las 20:00h
-              </p>
-            </div>
-            <img
-              src="https://media.tenor.com/rfWi_Eu95RkAAAAi/paloma-dove.gif"
-              alt=""
-            />
+          </div>
+          <div class="where__wrapper" id="malasaña">
+            <p class="where__text">
+              Te esperamos el 13.05.23 en Palma, 33 a las 20:00h
+            </p>
           </div>
         </section>
       </div>
     </main>
-    <!-- <script src="typewritting.js" type="text/javascript"></script> -->
+    <script src="typewritting.js" type="text/javascript"></script>
+    <script src="molesto.js" type="text/javascript"></script>
   </body>
 </html>
