--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Syne&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -22,22 +22,21 @@
               <h1 id="text">Ya somos maridas, ahora la party. Vente!</h1>
             </div>
             <div class="hero__content--gifs">
-              <div class="two__gifs--container">
+              <div class="two_gifs--container">
+                <img
+                  class="emoji__laugh bird"
+                  src="https://media.tenor.com/7-DE65c5-yAAAAAi/ring-joypixels.gif"
+                  alt=""
+                />
                 <img
                   class="emoji__laugh cat"
                   src="https://media.tenor.com/r6MJYXMMyAQAAAAi/chat-cat.gif"
                   alt=""
                 />
-                <img
-                  class="emoji__laugh"
-                  src="https://media.tenor.com/-ZSr_aYh6FAAAAAi/la-lisa.gif"
-                  alt=""
-                />
               </div>
-
               <img
-                class="emoji__laugh bird"
-                src="https://media.tenor.com/7-DE65c5-yAAAAAi/ring-joypixels.gif"
+                class="emoji__laugh"
+                src="https://media.tenor.com/-ZSr_aYh6FAAAAAi/la-lisa.gif"
                 alt=""
               />
             </div>
@@ -60,11 +59,12 @@
               alt=""
             />
           </div>
-          <div class="where__wrapper" id="malasaña">
+          <div class="where__wrapper">
             <p class="where__text">
               Te esperamos el 13.05.23 en Palma, 33 a las 20:00h
             </p>
           </div>
+          <div id="malasaña"></div>
         </section>
       </div>
     </main>
