only one gif on hero

--- a/index.html
+++ b/index.html
@@ -21,27 +21,21 @@
             <div class="hero__content--text">
               <h1 id="text">Ya somos maridas, ahora la party. Vente!</h1>
             </div>
+            <div class="button__wrapper"></div>
             <div class="hero__content--gifs">
               <div class="two_gifs--container">
                 <img
-                  class="emoji__laugh bird"
-                  src="https://media.tenor.com/7-DE65c5-yAAAAAi/ring-joypixels.gif"
-                  alt=""
-                />
-                <img
                   class="emoji__laugh cat"
-                  src="https://media.tenor.com/r6MJYXMMyAQAAAAi/chat-cat.gif"
+                  src="https://media1.giphy.com/media/2AKMlk7Cy9OA6CgUgC/giphy.gif?cid=ecf05e47595vvnf9dvuz8acae5afxjodfezw1os66obyq3gz&ep=v1_stickers_search&rid=giphy.gif&ct=s"
                   alt=""
                 />
               </div>
               <img
-                class="emoji__laugh"
+                class="emoji__laugh lisa"
                 src="https://media.tenor.com/-ZSr_aYh6FAAAAAi/la-lisa.gif"
                 alt=""
               />
             </div>
-          </div>
-          <div class="button__wrapper">
             <button class="hero__button" onclick="goWithTheFlow()">
               <img
                 class="heart"
