--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                   alt=""
                 />
               </div>
-              <img
+              <!-- <img
                 class="emoji__laugh lisa"
                 src="https://media.tenor.com/-ZSr_aYh6FAAAAAi/la-lisa.gif"
                 alt=""
-              />
+              /> -->
             </div>
             <button class="hero__button" onclick="goWithTheFlow()">
               <img
@@ -47,16 +47,28 @@
           </div>
         </section>
         <section class="info__content">
+          <div class="where__wrapper">
+            <div class="where__text">
+              <p>Te esperamos</p>
+
+              <div class="border">
+                <img src="./star.svg" alt="" />
+                <p>el sábado</p>
+              </div>
+              <p class="cascade">
+                <span>13.05.23</span>
+                <span>en Palma, 33</span>
+                <span>⌚️</span>
+                <span>a las</span>
+                <span class="time">20:00h</span>
+              </p>
+            </div>
+          </div>
           <div class="pigeon__wrapper">
             <img
               src="https://media.tenor.com/inHfVG1qRNcAAAAi/gracias.gif"
               alt=""
             />
-          </div>
-          <div class="where__wrapper">
-            <p class="where__text">
-              Te esperamos el 13.05.23 en Palma, 33 a las 20:00h
-            </p>
           </div>
           <div id="malasaña"></div>
         </section>
