random stickers and confetiiii

--- a/index.html
+++ b/index.html
@@ -22,19 +22,11 @@
               <h1 id="text">Ya somos maridas, ahora la party. Vente!</h1>
             </div>
             <div class="button__wrapper"></div>
+
             <div class="hero__content--gifs">
               <div class="two_gifs--container">
-                <img
-                  class="emoji__laugh cat"
-                  src="https://media1.giphy.com/media/2AKMlk7Cy9OA6CgUgC/giphy.gif?cid=ecf05e47595vvnf9dvuz8acae5afxjodfezw1os66obyq3gz&ep=v1_stickers_search&rid=giphy.gif&ct=s"
-                  alt=""
-                />
+                <img id="theSticker" class="emoji__laugh cat" src="" alt="" />
               </div>
-              <!-- <img
-                class="emoji__laugh lisa"
-                src="https://media.tenor.com/-ZSr_aYh6FAAAAAi/la-lisa.gif"
-                alt=""
-              /> -->
             </div>
             <button class="hero__button" onclick="goWithTheFlow()">
               <img
@@ -50,20 +42,26 @@
           <div class="where__wrapper">
             <div class="where__text">
               <p>Te esperamos</p>
-
+              <p>el sábado</p>
               <div class="border">
-                <img src="./star.svg" alt="" />
-                <p>el sábado</p>
-              </div>
-              <p class="cascade">
+                <span class="star">✹</span>
                 <span>13.05.23</span>
-                <span>en Palma, 33</span>
-                <span>⌚️</span>
-                <span>a las</span>
-                <span class="time">20:00h</span>
-              </p>
+              </div>
+              <div class="cascade">
+                <span class="palma">en Palma, 33</span>
+                <div>
+                  <span>⌚️</span>
+                  <span class="time">a las 20:00h</span>
+                </div>
+              </div>
             </div>
           </div>
+          <img
+            id="celebrate"
+            class="baloon"
+            src="https://media1.giphy.com/media/S3znNurKPFXuporiy3/200w.webp?cid=ecf05e479tgtwdm4y7kcg3zj4wemonz3egwwrlhdz43oyf8q&ep=v1_stickers_search&rid=200w.webp&ct=s"
+            alt=""
+          />
           <div class="pigeon__wrapper">
             <img
               src="https://media.tenor.com/inHfVG1qRNcAAAAi/gracias.gif"
