sticker fade in

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
             <div class="hero__content--gifs">
               <div class="two_gifs--container">
-                <img id="theSticker" class="emoji__laugh cat" src="" alt="" />
+                <img
+                  id="theSticker"
+                  class="emoji__laugh sticker"
+                  src=""
+                  alt=""
+                />
               </div>
             </div>
             <button class="hero__button" onclick="goWithTheFlow()">
